parser/tests/snapshots/test_parser__stmt_if.snap
---
source: parser/tests/test_parser.rs
expression: "ast_string(stringify!(stmt_if), functions::parse_stmt, \"if a:\\n b\")"

---
Node(
  kind: If(
    test: Node(
      kind: Name("a"),
      span: Span(
        start: 3,
        end: 4,
      ),
    ),
    body: [
      Node(
        kind: Expr(
          value: Node(
            kind: Name("b"),
            span: Span(
              start: 7,
              end: 8,
            ),
          ),
        ),
        span: Span(
          start: 7,
          end: 8,
        ),
      ),
    ],
    or_else: [],
  ),
  span: Span(
    start: 0,
    end: 8,
  ),
)
