parser/tests/snapshots/test_parser__stmt_return1.snap
---
source: parser/tests/test_parser.rs
expression: "ast_string(stringify!(stmt_return1), functions::parse_stmt, \"return\")"

---
Node(
  kind: Return(
    value: None,
  ),
  span: Span(
    start: 0,
    end: 6,
  ),
)
