parser/tests/snapshots/test_parser__stmt_return2.snap
---
source: parser/tests/test_parser.rs
expression: "ast_string(stringify!(stmt_return2), functions::parse_stmt, \"return x\")"

---
Node(
  kind: Return(
    value: Some(Node(
      kind: Name("x"),
      span: Span(
        start: 7,
        end: 8,
      ),
    )),
  ),
  span: Span(
    start: 0,
    end: 8,
  ),
)
