parser/tests/snapshots/test_parser__stmt_return3.snap
---
source: parser/tests/test_parser.rs
expression: "ast_string(stringify!(stmt_return3), functions::parse_stmt, \"return not x\")"

---
Node(
  kind: Return(
    value: Some(Node(
      kind: UnaryOperation(
        op: Node(
          kind: Not,
          span: Span(
            start: 7,
            end: 10,
          ),
        ),
        operand: Node(
          kind: Name("x"),
          span: Span(
            start: 11,
            end: 12,
          ),
        ),
      ),
      span: Span(
        start: 7,
        end: 12,
      ),
    )),
  ),
  span: Span(
    start: 0,
    end: 12,
  ),
)
