parser/tests/snapshots/test_parser__stmt_revert.snap
---
source: parser/tests/test_parser.rs
expression: "ast_string(stringify!(stmt_revert), functions::parse_stmt, \"revert\")"

---
Node(
  kind: Revert,
  span: Span(
    start: 0,
    end: 6,
  ),
)
