parser/tests/snapshots/test_parser__type_3d.snap
---
source: parser/tests/test_parser.rs
expression: "ast_string(stringify!(type_3d), types::parse_type_desc, \"u256[4][4][4]\")"

---
Node(
  kind: Array(
    typ: Node(
      kind: Array(
        typ: Node(
          kind: Array(
            typ: Node(
              kind: Base(
                base: "u256",
              ),
              span: Span(
                start: 0,
                end: 4,
              ),
            ),
            dimension: 4,
          ),
          span: Span(
            start: 0,
            end: 7,
          ),
        ),
        dimension: 4,
      ),
      span: Span(
        start: 0,
        end: 10,
      ),
    ),
    dimension: 4,
  ),
  span: Span(
    start: 0,
    end: 13,
  ),
)
